[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmdb-mixin"
version = "0.1.0"
description = "Transparent LMDB persistence for Pydantic models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WangXinyan940" },
]
dependencies = [
    "pydantic>=2.0",
    "lmdb>=1.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lmdb_mixin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
